# intelligentSportMonitoring

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  aux  aux.cpp  cmake_install.cmake  func.cpp  hsv_range.txt  playerdetect  playerdetector.cpp
classifier/: haarcascade_player.xml
